# binja-obfu

./: .gitignore  .gitmodules  CMakeLists.txt
include/: BackgroundTaskThread.h  BinaryNinja.h  BinaryViewAssociatedDataStore.h  DataBufferAdapter.h  MLIL.h  MLIL_SSA.h  ObfuArchitectureHook.h  ObfuPasses.h  ObjectDestructionNotification.h  PatchBuilder.h  PatternScanner.h
src/: DataBufferAdapter.cpp  MLIL.cpp  MLIL_SSA.cpp  ObfuArchitectureHook.cpp  ObfuPasses.cpp  ObjectDestructionNotification.cpp  PatchBuilder.cpp  PatternScanner.cpp  main.cpp
